# AndroidProject

app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/cameracountmodule/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: black_pipe_small.xml
app/src/main/cpp/: ImageProc.cpp  ImageProc.h  LineProc.cpp  RectangleProc.cpp  native-lib.cpp
app/src/main/java/com/cameracountmodule/Algorithm/: ImageAnalysis.java
app/src/main/java/com/cameracountmodule/Utils/: Global.java
app/src/main/java/com/cameracountmodule/activity/: CameraActivity.java  CameraResultActivity.java  ImageCropper.java  MainActivity.java  SettingsActivity.java  WebViewActivity.java
app/src/main/java/com/cameracountmodule/cameraCropper/: CameraBitmapCroppingWorkerTask.java  CameraBitmapLoadingWorkerTask.java  CameraBitmapUtils.java  CameraCropImage.java  CameraCropImageActivity.java  CameraCropImageAnimation.java  CameraCropImageOptions.java  CameraCropImageView.java  CameraCropOverlayView.java  CameraCropWindowHandler.java  CameraCropWindowMoveHandler.java
app/src/main/java/com/cameracountmodule/interfaceUI/: CropCallback.java  DetectionCallback.java  DrawingCallback.java  FinishTakePhoto.java
app/src/main/java/com/cameracountmodule/manager/: CameraPreview.java  DrawingPad.java  GoogleMapManager.java  GooglePlayApp.java  SettingsManager.java  ShareManager.java  ViewExtras.java
app/src/main/java/com/cameracountmodule/model/: Circles.java  DataClass.java  ImageResultType.java  LineModel.java  Lines.java  Rectangles.java
app/src/main/res/drawable/: circular_progress.xml
app/src/main/res/layout/: activity_camera.xml  activity_camera_result.xml  activity_image_cropper.xml  activity_main.xml  activity_settings.xml  crop_view.xml  item_show_share_camera_result.xml
app/src/main/res/menu/: menu_home.xml  menu_result.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/com/cameracountmodule/: ExampleUnitTest.java
openCVLibrary320/: build.gradle
